[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["Barnaby Gray <barnaby@pickle.me.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.19.4"
scipy = "^1.5.4"
numba = "^0.52.0"
parsimonious = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
